homework/5.kubernetes-network/redmine.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redmine
  namespace: gb5
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: redmine
  template:
    metadata:
      labels:
        app: redmine
    spec:
      containers:
      - name: redmine
        image: redmine:4.1.1
        ports:
        - containerPort: 3000
