homework/5.kubernetes-network/pgservice.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: gb4
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
