homework/5.kubernetes-network/rservice.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redmine-service
  namespace: gb5
spec:
  selector:
    app: redmine
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 3000
